<resources>
    <string name="app_name">Command Center</string>
    <string name="app_version">1.0 RC1.1</string>
    <string name="app_version_code">13</string>
    <string name="debug_title">CC Debugging</string>
    <string name="server_exception">Server returned exception</string>
    <string name="ecmapi_base_url">https://cradlepointecm.com/api/v1/</string>
    <string name="connecting">Connecting to router&#8230;</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="local_title">Direct Login</string>
    <string name="routerip_hint">Router IP</string>
    <string name="password_hint">Router Admin Password</string>
    <string name="default_gateway">Use Default Gateway</string>
    <string name="remote_admin">Use Remote Admin</string>
    <string name="connect">Connect</string>
    <string name="switch_to_ecm">Switch to ECM Login</string>
    <string name="locallogin_actionbar_title">Local Device Login</string>
    <string name="saved_profiles_title">Saved Profiles</string>
    <string name="direct_login_fail">Login failed. Check your credentials.</string>
    <string name="use_ssl">Use SSL</string>
    <string name="routerport_hint">Port</string>
    <string name="username_hint">Username</string>
    <string name="show_direct_advanced">Show Advanced Options</string>
    <string name="hide_direct_advanced">Hide Advanced Options</string>
    <string name="ecm_title">Enterprise Cloud Manager</string>
    <string name="switch_to_local">Switch to direct login</string>
    <string name="ecm_username_hint">ECM Username</string>
    <string name="ecm_password_hint">ECM Password</string>
    <string name="login">Login</string>
    <string name="ecm_actionbar_title">ECM Login</string>
    <string name="ecmrouters_actionbar_title">ECM Routers</string>
    <string name="ecm_connecting">Connecting to ECM&#8230;</string>
    <string name="ecm_failed_get_routers">Failed to get list of routers from ECM</string>
    <string name="no_routers">No routers managed by ECM</string>
    <string name="command_title">Command Center</string>
    <string name="action_settings">App Settings</string>
    <string name="action_logout">Logout</string>
    <string name="logged_out">You have been logged out.</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="wireless">Wireless</string>
    <string name="lan">LAN</string>
    <string name="wan">WiFi as WAN/Bridge</string>
    <string name="gpio">LED Control</string>
    <string name="router_info">Router Information</string>
    <string name="wireless_desc">Configure access points</string>
    <string name="lan_desc">Kick wireless clients</string>
    <string name="wan_desc">Connect to other routers</string>
    <string name="gpio_desc">Turn LEDs on or off</string>
    <string name="router_info_desc">General router information</string>
    <string name="wifiwan_title">WiFi as WAN</string>
    <string name="wifibridge_title">WiFi as Bridge</string>
    <string name="wificlient_title">Bridge/WWAN Disabled</string>
    <string name="wifimenu_sort_signal">Sort by signal</string>
    <string name="wifi_sort_alphabetically">Sort by name</string>
    <string name="wlan_reading">Reading WLAN Configuration</string>
    <string name="wlan_get_config_failure">Failed to read WLAN configuration</string>
    <string name="wlan_hidden_ssid">&lt;Hidden&gt;</string>
    <string name="wifi">WiFi</string>
    <string name="warning_clientchange">WiFi Client Mode Change</string>
    <string name="disabled">disabled</string>
    <string name="confirm_client_change">Are you sure you want to change the wireless client mode to %s? This may affect network connectivity.</string>
    <string name="bridged">bridge</string>
    <string name="wwan">wwan</string>
    <string name="wificlient_no_access_points">No nearby access points or wireless is off.</string>
    <string name="wificlient_loading">Retreiving list of nearby access points</string>
    <string name="wificlient_failed_to_load">Failed to retrieve list of nearby access points</string>
    <string name="loading_lan_clients">Retreiving list of clients</string>
    <string name="no_clients">No clients are currently connected</string>
    <string name="ip_address">IP Address</string>
    <string name="lan_clients_failure">Failed to read LAN/Clients</string>
    <string name="lan_title">LAN Clients</string>
    <string name="kick">Kick</string>
    <string name="ban">Ban</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="unknown">Unknown</string>
    <string name="ssid">SSID</string>
    <string name="ssidname">SSID Name</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="ssvalue">SSValue</string>
    <string name="network_security">Network Security</string>
    <string name="security_type">SecurityType</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="wan_allow_roaming">Connect to any AP with this SSID</string>
    <string name="connecting_as_wan">Connecting as WAN&#8230;</string>
    <string name="hidden_ssid">Hidden SSID</string>
    <string name="gpio_title">LED Control</string>
    <string name="reset_leds">Reset LEDs</string>
    <string name="signalStrength0">Signal Strength 0</string>
    <string name="signalStrength1">Signal Strength 1</string>
    <string name="signalStrength2">Signal Strength 2</string>
    <string name="signalStrength3">Signal Strength 3</string>
    <string name="power_led_green">Power LED Green</string>
    <string name="wifi_led_red">Wifi LED Red</string>
    <string name="wifi_led_green">Wifi LED Green</string>
    <string name="wifi_led_blue">Wifi LED Blue</string>
    <string name="usb1_led_red">USB1 LED Red</string>
    <string name="usb1_led_green">USB1 LED Green</string>
    <string name="usb2_led_red">USB2 LED Red</string>
    <string name="usb2_led_green">USB2 LED Green</string>
    <string name="usb3_led_red">USB3 LED Red</string>
    <string name="usb3_led_green">USB3 LED Green</string>
    <string name="usb3">USB3</string>
    <string name="usb2">USB2</string>
    <string name="usb1">USB1</string>
    <string name="expansionBay1_led_red">Expansion Bay 1 LED Red</string>
    <string name="expansionBay1_led_green">Expansion Bay 1 LED Green</string>
    <string name="expansionBay2_led_red">Expansion Bay 2 LED Red</string>
    <string name="expansionBay2_led_green">Expansion Bay 2 LED Green</string>
    <string name="gpio_loading">Reading LED configuration</string>
    <string name="gpio_get_config_failure">Failed to read LED configuration</string>
    <string name="gpio_get_null_response">LED response was null.</string>
    <string name="gpio_load_failed">Failed to read LED configuration</string>
    <string name="save_profile">Save connection as profile</string>
    <string name="profile_exists">Profile already exists</string>
    <string name="pin_actionbar_title">UNLOCK</string>
    <string name="pin_verify">Enter PIN again to verify</string>
    <string name="pin_verify_fail">PIN did not match</string>
    <string name="pin_create">Enter a new PIN to continue</string>
    <string name="pin_enter">Enter your PIN to continue</string>
    <string name="pin_validate_fail">Incorrect PIN</string>
    <string name="wipe_profiles_warning">Are you sure you want to wipe all stored profiles? You PIN will remain intact. The app will require a restart.</string>
    <string name="wipe_all_warning">Are you sure you want to clear your PIN? All profiles will be deleted as well. The app will require a restart.</string>
    <string name="profiledescriptor_routerid">ECM ID</string>
    <string name="profiledescriptor_routerip">Router IP</string>
    <string name="profiledescriptor_uses_ssl">Uses SSL</string>
    <string name="profiledescriptor_routerport">Port</string>
    <string name="restart_app_banner">Deleted profiles will not be fully removed until the app is restarted.</string>
    <string name="no_profiles">You don\'t have any saved profiles! Log into some routers to create some.</string>
    <string name="confirm_router_management">Are you sure you want to connect and manage %1$s?</string>
    <string name="direct_profile_dialog_title">Direct Login Profile</string>
    <string name="save_profile_direct">Save this connection as a profile if connection succeeds</string>
    <string name="confirm_router_direct">Saving a direct connection as a profile saves login information for easy future connections to this router.</string>
    <string name="crypto_prefsdb">crypto</string>
    <string name="splash_text_ecm">ECM</string>
    <string name="splash_text_local">Local Router</string>
    <string name="splash_text">Select</string>
    <string name="splash_textup">^</string>
    <string name="splash_textdown">v</string>
    <string name="text_preferredconnection">Set this connection type as the default when launching the app?</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="product">Product</string>
    <string name="firmware">Firmware</string>
    <string name="mac_address">MAC Address</string>
    <string name="uptime">Up Time</string>
    <string name="hostname">Host Name</string>
    <string name="num_clients"># Clients</string>
    <string name="product_info_fail">Failed to read Product Info</string>
    <string name="info_reading">Reading Product Info</string>
    <string name="fw_info_fail">Failed to read Firmware Info</string>
    <string name="status_fail">Failed to read Status</string>
    <string name="loading">Loading&#8230;</string>
    <string name="wap_client_connection_insecure">Client connections will not be secure as network communication is not encrypted</string>
    <string name="wap_broadcast">Broadcast SSID</string>
    <string name="wap_isolate">Isolate clients</string>
    <string name="newpassword">New Password</string>
    <string name="prefs_header_uititle">User Interface</string>
    <string name="prefs_header_uisubtitle">Look &amp; feel</string>
    <string name="prefs_header_securitytitle">Security</string>
    <string name="prefs_header_securitysubtitle">App Security</string>
    <string name="prefs_header_advancedtitle">Advanced Mode</string>
    <string name="prefs_header_advancedsubtitle">Tweak advanced settings</string>
    <string name="prefs_delete_profiles">Delete saved profiles</string>
    <string name="prefs_delete_profiles_summary">Wipe all profiles, keeping PIN intact</string>
    <string name="prefs_delete_pin_summary">Remove PIN from device. Removes all profiles as well</string>
    <string name="prefs_delete_pin">Clear PIN</string>
    <string name="prefs_open_source">Open Source Licenses</string>
    <string name="prefs_open_source_summary">Open source projects used in Command Center</string>
    <string name="prefs_app_version">Build</string>
    <string name="prefs_header_aboutsubtitle">About this application</string>
    <string name="prefs_header_abouttitle">About&#8230;</string>
    <string name="prefs_googleplus_group">Google+ Community</string>
    <string name="prefs_googleplus_group_summary">Give app feedback directly to developers</string>
    <string name="prefs_open_robospice">Robospice</string>
    <string name="prefs_open_pulltorefresh">Android - Pull to Refresh</string>
    <string name="prefs_open_smoothprogressbar">Smooth Progress Bar</string>
    <string name="prefs_open_logthislib">LogThisLib</string>
    <string name="prefs_androidlicensespage">Android Licenses Page</string>
    <string name="prefs_manage_profiles">Manage Profiles</string>
    <string name="prefs_manage_profiles_summary">View and remove specific profiles</string>
    <string name="about">About</string>
</resources>