<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="com.cs481.commandcenter.fragments.preferences.UIPrefsFragment"
        android:summary="@string/prefs_header_uisubtitle"
        android:title="@string/prefs_header_uititle" />
    <header
        android:fragment="com.cs481.commandcenter.fragments.preferences.SecurityPrefsFragment"
        android:summary="@string/prefs_header_securitysubtitle"
        android:title="@string/prefs_header_securitytitle" />
    <header
        android:fragment="com.cs481.commandcenter.fragments.preferences.AdvancedPrefsFragment"
        android:summary="@string/prefs_header_advancedsubtitle"
        android:title="@string/prefs_header_advancedtitle" />
    <header
        android:fragment="com.cs481.commandcenter.fragments.preferences.AboutPrefsFragment"
        android:summary="@string/prefs_header_aboutsubtitle"
        android:title="@string/prefs_header_abouttitle" />

</preference-headers>