<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:enabled="true"
        android:fragment="com.cs481.commandcenter.fragments.preferences.ProfilesFragment"
        android:key="@string/prefs_manage_profiles"
        android:summary="@string/prefs_manage_profiles_summary"
        android:title="@string/prefs_manage_profiles" />
    <Preference
        android:enabled="true"
        android:key="@string/prefs_delete_profiles"
        android:summary="@string/prefs_delete_profiles_summary"
        android:title="@string/prefs_delete_profiles" />

    <com.cs481.commandcenter.fragments.preferences.CCDialogPreference
        android:dialogMessage="Clearing your PIN will also delete all the profiles on this device. Are you sure you want to continue?"
        android:enabled="true"
        android:key="@string/prefs_delete_pin"
        android:summary="@string/prefs_delete_pin_summary"
        android:title="@string/prefs_delete_pin" />

</PreferenceScreen>