<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:fragment="com.cs481.commandcenter.fragments.preferences.LicensesFragment"
        android:enabled="true"
        android:key="@string/prefs_open_source"
        android:summary="@string/prefs_open_source_summary"
        android:title="@string/prefs_open_source" />
    <Preference
        android:enabled="true"
        android:key="@string/prefs_googleplus_group"
        android:title="@string/prefs_googleplus_group"
        android:summary="@string/prefs_googleplus_group_summary" />
    
    <Preference
        android:enabled="false"
        android:key="@string/prefs_app_version"
        android:title="@string/prefs_app_version" />

</PreferenceScreen>