<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:enabled="true"
        android:key="@string/prefs_open_robospice"
        android:title="@string/prefs_open_robospice" />
    <Preference
        android:enabled="true"
        android:key="@string/prefs_open_pulltorefresh"
        android:title="@string/prefs_open_pulltorefresh" />
    <Preference
        android:enabled="true"
        android:key="@string/prefs_open_smoothprogressbar"
        android:title="@string/prefs_open_smoothprogressbar" />
    <Preference
        android:enabled="true"
        android:key="@string/prefs_open_logthislib"
        android:title="@string/prefs_open_logthislib" />
    <Preference
        android:enabled="true"
        android:key="@string/prefs_androidlicensespage"
        android:title="@string/prefs_androidlicensespage" />

</PreferenceScreen>