<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_switchtoecm"
        android:title="@string/switch_to_ecm">
    </item>
    <item
        android:id="@+id/menu_switchtolocal"
        android:title="@string/switch_to_local">
    </item>
    <item
        android:id="@+id/menu_preenter_ip"
        android:title="Preenter Cloud IP"
        android:visible="false">
    </item>
    <item
        android:id="@+id/fr_debug"
        android:title="Debug - TestPin"
        android:visible="false">
    </item>
    <item
        android:id="@+id/fr_debug_new"
        android:title="Debug - NewPin"
        android:visible="false">
    </item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings">
    </item>
    <item
        android:id="@+id/about"
        android:title="@string/about">
    </item>

</menu>