<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/wapconnect_ssidlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wapconnect_ssidset_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product" />

            <TextView
                android:id="@+id/wapconnect_ssidset_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firmware" />
        </LinearLayout>

        <TextView
            android:id="@+id/wapconnect_signalstrength_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wapconnect_ssidlayout"
            android:text="@string/mac_address" />

        <TextView
            android:id="@+id/wapconnect_signalstrength_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wapconnect_signalstrength_text"
            android:text="@string/uptime" />

        <TextView
            android:id="@+id/wapconnect_securitytype_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wapconnect_signalstrength_value"
            android:layout_marginTop="5dp"
            android:text="@string/hostname" />

    </RelativeLayout>

</ScrollView>