<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </View>

    <TextView
        android:id="@+id/locallogin_header"
        style="@style/TextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/local_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/checkboxes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <CheckBox
            android:id="@+id/use_default_gateway"
            style="@style/CheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/default_gateway" />

        <CheckBox
            android:id="@+id/use_ssl"
            style="@style/CheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="false"
            android:text="@string/use_ssl"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nongateway_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <EditText
            android:id="@+id/router_ip"
            style="@style/EditTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:ems="9"
            android:gravity="center"
            android:hint="@string/routerip_hint"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <EditText
            android:id="@+id/router_port"
            style="@style/EditTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:ems="5"
            android:gravity="center"
            android:hint="@string/routerport_hint"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:singleLine="true" />
    </LinearLayout>

    <EditText
        android:id="@+id/router_username"
        style="@style/EditTextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="16"
        android:gravity="center"
        android:hint="@string/username_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:visibility="gone" >
    </EditText>

    <EditText
        android:id="@+id/router_password"
        style="@style/EditTextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="16"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:imeActionLabel="@string/connect"
        android:imeOptions="actionSend"
        android:inputType="textPassword"
        android:singleLine="true" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/show_direct_advanced_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/show_direct_advanced" />

        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/connect" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </View>

</LinearLayout>