<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/wapconnect_ssidlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wapconnect_ssidset_text"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssid" />

            <EditText
                android:id="@+id/wap_ssid_value"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ssidname"
                android:inputType="textNoSuggestions|textVisiblePassword" />
        </LinearLayout>

        <TextView
            android:id="@+id/wapconnect_securitytype_text"
            style="@style/TextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wapconnect_ssidlayout"
            android:layout_marginTop="5dp"
            android:text="@string/network_security" />

        <Spinner
            android:id="@+id/wap_encryptiontype_spinner"
            style="@style/SpinnerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/wapconnect_securitytype_text"
            android:layout_below="@id/wapconnect_securitytype_text"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/wap_ciphertype_spinner"
            style="@style/SpinnerTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/wap_encryptiontype_spinner"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@id/wap_encryptiontype_spinner"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/wap_insecure_text"
            style="@style/SubTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wap_encryptiontype_spinner"
            android:text="@string/wap_client_connection_insecure" />

        <CheckBox
            android:id="@+id/wap_broadcasting"
            style="@style/CheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wap_insecure_text"
            android:text="@string/wap_broadcast" />

        <CheckBox
            android:id="@+id/wap_isolating"
            style="@style/CheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/wap_broadcasting"
            android:text="@string/wap_isolate" />

        <RelativeLayout
            android:id="@+id/wapconnect_passwordlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wap_isolating"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wap_newpassword_text"
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:text="@string/newpassword" />

            <CheckBox
                android:id="@+id/wapconnect_showpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wap_newpassword_field"
                style="@style/CheckBoxTheme"
                android:text="@string/show_password" />

            <EditText
                android:id="@+id/wap_newpassword_field"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/wap_newpassword_text"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>